Production working version [1.0]